[package]
name = "fasttransform"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "fasttransform"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.17.1", features = ["extension-module"] }
numpy = "0.17.2"
ndarray = { version="0.15.6", features = ["rayon", "blas"] }
blas-src = { version = "0.8.0", features = ["openblas"] }
openblas-src = { version = "0.10.5", features = ["cblas", "system"] }

[workspace]
